[gd_scene load_steps=12 format=2]

[ext_resource path="res://Schoolwork-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://scripts/StartScene.gd" type="Script" id=2]
[ext_resource path="res://white.png" type="Texture" id=3]

[sub_resource type="DynamicFont" id=1]
size = 169
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 1, 1, 1, 1 )
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color( 0, 0, 0, 1 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxEmpty" id=5]

[sub_resource type="StyleBoxEmpty" id=6]

[sub_resource type="DynamicFont" id=7]
size = 72
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=9]
bg_color = Color( 1, 1, 1, 1 )
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color( 0, 0, 0, 1 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[node name="StartScene" type="Control"]
margin_right = 1024.0
margin_bottom = 600.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -87.5
margin_bottom = 87.5
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "bread, milk, eggs"
align = 1
valign = 1
autowrap = true

[node name="ButtonBox" type="Control" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -384.0
margin_top = -150.0
margin_right = 384.0
margin_bottom = -49.9999

[node name="Play" type="Button" parent="ButtonBox"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_top = -37.5
margin_right = 250.0
margin_bottom = 37.5
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 3 )
custom_styles/focus = SubResource( 8 )
custom_styles/disabled = SubResource( 5 )
custom_styles/normal = SubResource( 6 )
custom_fonts/font = SubResource( 7 )
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
text = "play"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Quit" type="Button" parent="ButtonBox"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -250.0
margin_top = -37.5
margin_bottom = 37.5
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 3 )
custom_styles/focus = SubResource( 9 )
custom_styles/disabled = SubResource( 5 )
custom_styles/normal = SubResource( 6 )
custom_fonts/font = SubResource( 7 )
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
text = "quit"

[node name="TextureRect" type="TextureRect" parent="."]
margin_right = 1024.0
margin_bottom = 600.0
texture = ExtResource( 3 )
expand = true

[node name="Tween" type="Tween" parent="TextureRect"]
[connection signal="pressed" from="ButtonBox/Play" to="." method="_on_Play_pressed"]
[connection signal="pressed" from="ButtonBox/Quit" to="." method="_on_Quit_pressed"]
